test/conformance/chainsaw/generate/validation/clusterpolicy/permissions/same-kind/01-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:background-controller:manage-policy
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
rules:
- apiGroups:
  - kyverno.io
  resources:
  - policies
  verbs:
  - create
  - update
  - delete
  - get
