test/conformance/chainsaw/generate/validation/clusterpolicy/permissions/same-kind/policy-1-subresource.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-same-kind-pol-1
spec:
  rules:
    - name: generate-add-labels-policy
      match:
        all:
        - resources:
            kinds:
              - Namespace
      generate:
        synchronize: true
        apiVersion: kyverno.io/v1
        kind: Policy/status
        name: add-labels-policy
        namespace: '{{request.object.metadata.name}}'
        data:
          spec:
            rules:
            - name: add-labels
              match:
                all:
                - resources:
                    kinds:
                    - Pod
                    - Service
                    - PersistentVolumeClaim
              mutate:
                patchStrategicMerge:
                  metadata:
                    labels:
                      AppID: '{{request.object.metadata.labels.AppID}}'
