test/conformance/chainsaw/generate/validation/clusterpolicy/permissions/same-kind/chainsaw-step-02-assert-1-1.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: policies.k8s.nginx.org
spec: {}
status:
  acceptedNames:
    kind: Policy
    listKind: PolicyList
    plural: policies
    singular: policy
