test/conformance/chainsaw/generate/validation/clusterpolicy/permissions/same-kind/03-check.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: check
spec:
  timeouts: {}
  try:
  - apply:
      file: policy-1.yaml
  - apply:
      file: policy-1-subresource.yaml
  - apply:
      check:
        (error != null): true
      file: policy-2.yaml
  - apply:
      check:
        (error != null): true
      file: policy-2-subresource.yaml
