test/conformance/chainsaw/generate/validation/clusterpolicy/permissions/same-kind/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: same-kind
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-2-1.yaml
  - name: step-02
    try:
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
  - name: step-03
    try:
    - apply:
        file: policy-1.yaml
    - apply:
        file: policy-1-subresource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-2.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-2-subresource.yaml
